\name{NEWS}
\title{News for Package \pkg{RInside}}
\newcommand{\ghpr}{\href{https://github.com/eddelbuettel/rinside/pull/#1}{##1}}
\newcommand{\ghit}{\href{https://github.com/eddelbuettel/rinside/issues/#1}{##1}}

\section{Changes in RInside version 0.2.16 (2020-03-xx)}{
  \itemize{
    \item RInside is now also embeddable (with a reduced interface) from
    C applications thanks to work by Lance Bachmeier (and Dirk)
  }
}

\section{Changes in RInside version 0.2.15 (2019-03-06)}{
  \itemize{
    \item Improved Windows build support by copying
    \code{getenv("R_HOME")} result and improving backslash handling in
    environemt variable setting (Jonathon Love in \ghpr{27} and
    \ghpr{28})
    \item Improved Windows build support by quote-protecting
    \code{Rscript} path in \code{Makevars.win} (François-David Collin in
    \ghpr{33})
    \item A URL was corrected in README.md (Zé Vinícius in \ghpr{34}).
    \item Temporary \code{SEXP} objects are handled more carefully at
    initialization to satisfy `rchk` (Dirk in \ghpr{36})
  }
}

\section{Changes in RInside version 0.2.14 (2017-04-28)}{
  \itemize{
    \item Interactive mode can use readline REPL (Łukasz Łaniewski-Wołłk
    in \ghpr{25}, and Dirk in \ghpr{26})
    \item Windows macros checks now uses \code{_WIN32} (Kevin Ushey in
    \ghpr{22})
    \item The wt example now links with \code{libboost_system}
    \item The \code{Makevars} file is now more robist (Mattias Ellert in
    \ghpr{21})
    \item A problem with empty environment variable definitions on
    Windows was addressed (Jeroen Ooms in \ghpr{17} addressing \ghit{16})
    \item \code{HAVE_UINTPTR_T} is defined only if not already defined
    \item Travis CI is now driven via \code{run.sh} from our forked r-travis
  }
}

\section{Changes in RInside version 0.2.13 (2015-05-20)}{
  \itemize{
    \item Added workaround for a bug in R 3.2.0: by including the file
    \code{RInterface.h} only once we do not getting linker errors due to